# rent-ease

./: -lh Miniforge3-Linux-x86_64.sh  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  environment.yml  et --hard HEAD~1  how e0867b1 --name-only  package-lock.json  package.json  pyproject.toml  test.db  users.db
alembic/: env.py
alembic/versions/: 21c5a03aba1d_add_payments_table.py  3cdc333b3266_units_and_leases.py  445f7ca1bb11_create_files_table.py  55b76e70a9f9_add_profile_picture_id_to_users.py  608a20260ae1_add_sample_payments_data.py  62e407a50105_add_properties.py  62e407a50105_adde_properties.py  6636d8c9b16f_add_user_roles.py  6636d8c9b16f_added_user_roles.py  68af29647dcf_units_and_leases.py  7890abcdef12_add_profile_pictures_table.py  7a44552d02a7_change_invoice_to_file_id.py  7c63121eff9b_change_invoice_to_file_id.py  91506d06f6fd_add_admin_user.py  9abe71525d5b_add_autoincrement_to_primary_keys.py  abc123def456_load_seed_data.py  (+4 more)
api/: main.py  upload.py
app/: database.py  main.py  models.py  schemas.py  security.py
client/: app.config.ts  app.vue  content.config.ts  error.vue  eslint.config.mjs  nuxt.config.ts  package.json  tailwind.config.ts
docker/: .dockerignore.backend  .env-backend  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
scripts/: check_data  cleanup_ports  lint  run.sh  run_dev  run_docker  setup  setup.py  setup_env  setup_mysql.sh  update
tests/: clear_database.py  download_file  download_profile_pictures.py  load_fixtures.py  load_seeds.py  reload_database.py
(+192 files in other folders)
