[tool.poetry]
name = "rent-ease"
version = "0.1.0"
description = "RentEase backend API"
authors = ["Your Name <your@email.com>"]
package-mode = false
[tool.poetry.dependencies]
 pydantic = {version = "^2.7.1", extras = ["email"]}
python = ">=3.8"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.6"
email-validator = "^2.1.1"
alembic = "*"
bcrypt = "4.0.1"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 87
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",
    "B008"
]


[tool.ruff.lint.isort]
known-first-party = ["core", "src", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
